testData/inspections/unused-label/renameToBlankFix.go
package main

func _() {
<error descr="Unused label 'UnusedLabel'">Unus<caret>edLabel</error>:
    println("unused")
}